specification refinements in replay and mutation

--- a/src/impl_web_1/index.html
+++ b/src/impl_web_1/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script> jQuery.noConflict () </script>
     <script src="https://cdn.jsdelivr.net/npm/ramda@0.25.0/dist/ramda.min.js" integrity="sha256-YN22NHB7zs5+LjcHWgk3zL0s+CRnzCQzDOFnndmUamY=" crossorigin="anonymous"></script>
+    <script src="supp.js"></script>
     <script src="main.js"></script>
     hola !
   </body>
